--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
